--- a/images/index.html
+++ b/images/index.html
@@ -6,10 +6,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="styles/portfolio.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
+    <header class="header">
+        <nav>
+            <h1 class="nav-title"><span class="text-maroon">As</span>ma</h1>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <li><button class="btn-maroon">Hire</button></li>
+            </ul>
+        </nav>
+        <!-- header banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-subtitle">Hi, I am</h3>
+                <h1 class="banner-title">Asma Akter</h1>
+                <p class="banner-description">Trying something new today. Making my portfolio. Interesting but tiring too. Had to miss my classes today or else can't meet with deadline. In order to gain something, you have to lose something. </p>
+                <button class="btn-maroon">Download CV</button>
+            </div>
+            <img src="My project.png" alt="">
+        </div>
+    </header>
+    <main>
+        <section class="about-me">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure, numquam voluptas incidunt temporibus ipsum blanditiis voluptatem dignissimos quos eum adipisci, quae dolorem culpa, amet non reprehenderit pariatur voluptatum praesentium voluptatibus
+                nobis ipsam! Aliquam itaque, minima ratione sapiente saepe suscipit facere!</p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <p class="info-title">Name</p>
+                    <p class="info-description">Asma Akter</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Email</p>
+                    <p class="info-description">asmaakter@gmail.com</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Speciality</p>
+                    <p class="info-description">Web Dev</p>
+                </div>
+                <div class="about-info">
+                    <p class="info-title">Location</p>
+                    <p class="info-description">Ctg, Bd</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
 
+    </footer>
 </body>
 
 </html>
