--- a/images/index.html
+++ b/images/index.html
@@ -58,6 +58,39 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <div class="skill-container">
+                <div class="skill">
+                    <img src="icons/js.png" alt="">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi vel earum exercitationem repellendus expedita. Nulla.</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/react.png" alt="">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">Maxime at ipsa ab ipsam commodi, fugit totam, laudantium repudiandae reiciendis adipisci sapiente, dolore tenetur?</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/nodejs.png" alt="">
+                    <p class="skill-title">Node JS</p>
+                    <p class="skill-description">Temporibus laudantium neque nesciunt earum deserunt ab distinctio! Illum voluptatum, veritatis beatae culpa exercitationem explicabo!</p>
+                </div>
+                <div class="skill">
+                    <img src="icons/mongo.png" alt="">
+                    <p class="skill-title">Mongodb</p>
+                    <p class="skill-description">Voluptas nobis sint quae fugit dignissimos, fuga sunt iusto numquam voluptatum obcaecati veritatis nesciunt vero.</p>
+                </div>
+            </div>
+        </section>
+        <!-- resume section -->
+        <section class="resume">
+            <h3 class="section-title">A summary of my resume</h3>
+            <div class="resume-content">
+                <div></div>
+            </div>
+        </section>
     </main>
     <footer>
 
