--- a/images/index.html
+++ b/images/index.html
@@ -86,9 +86,51 @@
         </section>
         <!-- resume section -->
         <section class="resume">
-            <h3 class="section-title">A summary of my resume</h3>
+            <h3 class="section-title">A Summary Of My Resume</h3>
             <div class="resume-content">
-                <div></div>
+                <div>
+                    <h3 class="resume-title">My Education</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Bachelor in Computer Science & Engineering</h4>
+                        <h5 class="subtitle">Port City International University/2021-2025</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aperiam, blanditiis nihil illo repellendus ex?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Bachelor in Computer Science & Engineering</h4>
+                        <h5 class="subtitle">Port City International University/2021-2025</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aperiam, blanditiis nihil illo repellendus ex?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Bachelor in Computer Science & Engineering</h4>
+                        <h5 class="subtitle">Port City International University/2021-2025</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aperiam, blanditiis nihil illo repellendus ex?</p>
+                    </div>
+                </div>
+                <div>
+                    <h3 class="resume-title">My Experience</h3>
+                    <div class="resume-item">
+                        <h4 class="title">Bachelor in Computer Science & Engineering</h4>
+                        <h5 class="subtitle">Port City International University/2021-2025</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aperiam, blanditiis nihil illo repellendus ex?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Bachelor in Computer Science & Engineering</h4>
+                        <h5 class="subtitle">Port City International University/2021-2025</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aperiam, blanditiis nihil illo repellendus ex?</p>
+                    </div>
+                    <hr>
+                    <div class="resume-item">
+                        <h4 class="title">Bachelor in Computer Science & Engineering</h4>
+                        <h5 class="subtitle">Port City International University/2021-2025</h5>
+                        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta aperiam, blanditiis nihil illo repellendus ex?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-button">
+                <button class="btn-maroon">Download CV</button>
             </div>
         </section>
     </main>
