added section and contact

--- a/images/index.html
+++ b/images/index.html
@@ -27,7 +27,7 @@
         <div class="banner">
             <div>
                 <h3 class="banner-subtitle">Hi, I am</h3>
-                <h1 class="banner-title">Asma Akter</h1>
+                <h1 class="banner-title"> <span class="text-maroon">As</span>ma Akter</h1>
                 <p class="banner-description">Trying something new today. Making my portfolio. Interesting but tiring too. Had to miss my classes today or else can't meet with deadline. In order to gain something, you have to lose something. </p>
                 <button class="btn-maroon">Download CV</button>
             </div>
@@ -131,6 +131,32 @@
             </div>
             <div class="resume-button">
                 <button class="btn-maroon">Download CV</button>
+            </div>
+        </section>
+        <!-- contact section -->
+        <section class="contact">
+            <div>
+                <h3 class="section-title">Let's Connect</h3>
+                <p class="section-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae atque quia dolores consequatur neque vero!</p>
+                <a href="">
+                    <img src="icons/facebook.png" alt="">
+                </a>
+                <a href="">
+                    <img src="icons/twitter.png" alt="">
+                </a>
+                <a href="">
+                    <img src="icons/insta.png" alt="">
+                </a>
+            </div>
+            <div>
+                <h3 class="section-title">Let's Message Me</h3>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Your Name">
+                    <br>
+                    <input type="email" name="" id="" placeholder="Your Email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <input class="btn-maroon" type="submit" value="Submit">
+                </form>
             </div>
         </section>
     </main>
