added font awesome icons

--- a/images/index.html
+++ b/images/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/90078d7985.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -29,7 +30,7 @@
                 <h3 class="banner-subtitle">Hi, I am</h3>
                 <h1 class="banner-title"> <span class="text-maroon">As</span>ma Akter</h1>
                 <p class="banner-description">Trying something new today. Making my portfolio. Interesting but tiring too. Had to miss my classes today or else can't meet with deadline. In order to gain something, you have to lose something. </p>
-                <button class="btn-maroon">Download CV</button>
+                <button class="btn-maroon"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
             <img src="My project.png" alt="">
         </div>
@@ -130,7 +131,7 @@
                 </div>
             </div>
             <div class="resume-button">
-                <button class="btn-maroon">Download CV</button>
+                <button class="btn-maroon"><i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
         <!-- contact section -->
