--- a/images/index.html
+++ b/images/index.html
@@ -31,6 +31,7 @@
                 <h1 class="banner-title"> <span class="text-maroon">As</span>ma Akter</h1>
                 <p class="banner-description">Trying something new today. Making my portfolio. Interesting but tiring too. Had to miss my classes today or else can't meet with deadline. In order to gain something, you have to lose something. </p>
                 <button class="btn-maroon"><i class="fa-solid fa-download"></i> Download CV</button>
+                <button><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img src="My project.png" alt="">
         </div>
